--- a/style.css
+++ b/style.css
@@ -3,6 +3,23 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-body h1{
-    color: #eee;
+nav {
+    display: flex;
+    
+}
+
+nav .logo-container li{
+    list-style: none;
+}
+
+nav .links-containers {
+    display: flex;  
+}
+
+nav .links-containers ul{
+    justify-content: space-between;
+}
+
+nav .links-containers li{
+    list-style: none;
 }
